# HyperionOS

./: .env.example  .gitignore  AUTONOMY_ROADMAP.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  PRODUCTION_BOOT_PROMPT.md  PROMPT.md  README.md  USAGE_SCENARIOS.md
crates/hyperion-agent-runtime/: Cargo.toml
crates/hyperion-agent-runtime/src/: broker.rs  lib.rs  runtime.rs  stubs.rs  types.rs
crates/hyperion-agent-runtime/tests/: adaptive_backoff.rs  capability_gating.rs  cross_session_learning.rs  explanation_wiring.rs  lifecycle.rs  model_tier_degradation.rs  plugin_dispatch.rs  resource_profile_admission.rs
crates/hyperion-ai-runtime/: Cargo.toml
crates/hyperion-ai-runtime/src/: anthropic_backend.rs  candle_backend.rs  embedding.rs  gemini_backend.rs  lib.rs  model_catalog.rs  openai_compat_backend.rs  registry.rs  residency.rs  runtime.rs  types.rs
crates/hyperion-ai-runtime/tests/: anthropic_backend.rs  candle_gguf_safetensors.rs  candle_inference.rs  candle_load_selection.rs  gemini_backend.rs  infer.rs  openai_compat_backend.rs  residency.rs  tier_selection.rs
crates/hyperion-api-gateway/: Cargo.toml
crates/hyperion-api-gateway/src/: gateway.rs  lib.rs  router_bridge.rs  types.rs
crates/hyperion-api-gateway/tests/: capability_gating.rs  consent_gated_routing.rs  rate_limiting.rs  routes.rs
crates/hyperion-capability/: Cargo.toml
crates/hyperion-capability/src/: lib.rs  monitor.rs  revocation.rs  table.rs  token.rs  types.rs  wire.rs
crates/hyperion-capability/tests/: proptest_invariants.rs  unit.rs
crates/hyperion-cgroups/: Cargo.toml
crates/hyperion-cgroups/src/: cgroup.rs  errors.rs  lib.rs  mapping.rs  realtime.rs
crates/hyperion-cgroups/tests/: real_fairness.rs
crates/hyperion-compat/: Cargo.toml
crates/hyperion-compat/src/: browser.rs  host.rs  lib.rs  sandbox.rs  types.rs  workspace_bridge.rs
crates/hyperion-compat/tests/: capability_gating.rs  sandbox_and_render.rs  staged_promotion.rs  web_fetch.rs  workspace_bridge.rs
crates/hyperion-console/: Cargo.toml
crates/hyperion-console/assets/: seed_dataset.json
crates/hyperion-console/src/: a2a.rs  color.rs  discovery.rs  graph_explorer.rs  http_client.rs  http_server.rs  lib.rs  main.rs  mcp.rs  mesh.rs  mesh_dashboard.html  peer_trust.rs  secret_input.rs  session.rs
crates/hyperion-console/tests/: a2a_identity.rs  a2a_task_store.rs  candle_backend_model_selection.rs  candle_model_selection_persistence.rs  console_session.rs  install_binary.rs  mcp_a2a_server.rs  mcp_identity.rs  mcp_resources.rs  mcp_stdio.rs  mdns_discovery.rs  meaningful.rs  mesh_demo.rs  model_selection_persistence.rs  peer_trust.rs  scenario_file.rs  teach.rs  think_mode.rs
crates/hyperion-context/: Cargo.toml
crates/hyperion-context/src/: engine.rs  expertise.rs  lib.rs  propagation.rs  types.rs  working_set.rs
crates/hyperion-context/tests/: assemble.rs  entity_resolution.rs  expertise.rs  ipc_transport.rs  propagation.rs  summarization.rs
crates/hyperion-coordination/: Cargo.toml
crates/hyperion-coordination/src/: catalog.rs  engine.rs  lib.rs  types.rs
crates/hyperion-coordination/tests/: capability_gating.rs  events.rs  ipc_transport.rs  judgment_class.rs  object_affinity.rs  plugin_agent_allocation.rs  propose_write.rs  recovery_bridge.rs  shared_explanation_store.rs  worked_trace.rs
crates/hyperion-crypto/: Cargo.toml
crates/hyperion-crypto/src/: key_exchange.rs  lib.rs  publisher_registry.rs  sealed_stream.rs  secret_store.rs  sync_envelope.rs
crates/hyperion-crypto/tests/: keystore.rs  publisher_registry.rs  secret_store.rs  sync_envelope.rs
crates/hyperion-device/: Cargo.toml
crates/hyperion-device/src/: hardware_support.rs  lib.rs  manifest.rs  registry.rs  types.rs
crates/hyperion-device/tests/: capability_gating.rs  context_device_anchor.rs  cross_device_workspace.rs  hardware_support.rs  registry.rs  signature_verification.rs
crates/hyperion-events/: Cargo.toml
crates/hyperion-events/src/: bus.rs  lib.rs  types.rs
crates/hyperion-events/tests/: backpressure.rs  dedup.rs  ordering.rs  security.rs
crates/hyperion-explainability/: Cargo.toml
crates/hyperion-explainability/src/: calibration.rs  confidence.rs  lib.rs  render.rs  store.rs  types.rs
crates/hyperion-explainability/tests/: best_effort_reconstruction.rs  calibration.rs  capability_gating.rs  explain_query_capability_and_boundary.rs  explain_then_commit.rs  multi_agent_and_resolve_why.rs  resolve_why_with_graph.rs  self_consistency_confidence.rs
crates/hyperion-federation/: Cargo.toml
crates/hyperion-federation/src/: fleet.rs  hub.rs  kg_sync.rs  lib.rs  offload_bridge.rs  transport.rs  types.rs
crates/hyperion-federation/tests/: capability_gating.rs  kg_sync.rs  lease.rs  lease_heartbeat.rs  ledger_transport.rs  migration.rs  offload.rs  scheduler_offload_bridge.rs  sync_envelope.rs
crates/hyperion-init/: Cargo.toml
crates/hyperion-init/src/: linux.rs  main.rs
crates/hyperion-intent/: Cargo.toml
crates/hyperion-intent/src/: engine.rs  lib.rs  templates.rs  types.rs
crates/hyperion-intent/tests/: automation_workflow.rs  capability_gating.rs  engine.rs  generative_decomposition.rs  plugin_workflows.rs  think_mode.rs
crates/hyperion-ipc/: Cargo.toml
crates/hyperion-ipc/src/: bus.rs  channel.rs  frame.rs  lib.rs  noise_session.rs  region.rs  transport.rs  types.rs
crates/hyperion-ipc/tests/: integration.rs  real_transport.rs  region.rs  secure_transport.rs
crates/hyperion-knowledge-graph/: Cargo.toml
crates/hyperion-knowledge-graph/src/: decay.rs  display.rs  export.rs  graph.rs  import.rs  index.rs  lib.rs  providers.rs  types.rs
crates/hyperion-memory/: Cargo.toml
crates/hyperion-netstack/: Cargo.toml
crates/hyperion-observability/: Cargo.toml
crates/hyperion-plugin-framework/: Cargo.toml
crates/hyperion-privacy/: Cargo.toml
crates/hyperion-recovery/: Cargo.toml
crates/hyperion-release-gate/: Cargo.toml
crates/hyperion-scalability/: Cargo.toml
crates/hyperion-scheduler/: Cargo.toml
crates/hyperion-sdk/: Cargo.toml
crates/hyperion-security/: Cargo.toml
(+418 files in other folders)
