[workspace]
resolver = "2"
members = [
    "crates/hyperion-agent-runtime",
    "crates/hyperion-ai-runtime",
    "crates/hyperion-capability",
    "crates/hyperion-context",
    "crates/hyperion-coordination",
    "crates/hyperion-device",
    "crates/hyperion-federation",
    "crates/hyperion-intent",
    "crates/hyperion-ipc",
    "crates/hyperion-knowledge-graph",
    "crates/hyperion-memory",
    "crates/hyperion-model-router",
    "crates/hyperion-scheduler",
    "crates/hyperion-semantic-fs",
    "crates/hyperion-sim",
    "crates/hyperion-storage",
    "crates/hyperion-workspace",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/JGalego/HyperionOS"

[workspace.dependencies]
hyperion-agent-runtime = { path = "crates/hyperion-agent-runtime" }
hyperion-ai-runtime = { path = "crates/hyperion-ai-runtime" }
hyperion-capability = { path = "crates/hyperion-capability" }
hyperion-context = { path = "crates/hyperion-context" }
hyperion-coordination = { path = "crates/hyperion-coordination" }
hyperion-device = { path = "crates/hyperion-device" }
hyperion-federation = { path = "crates/hyperion-federation" }
hyperion-intent = { path = "crates/hyperion-intent" }
hyperion-ipc = { path = "crates/hyperion-ipc" }
hyperion-knowledge-graph = { path = "crates/hyperion-knowledge-graph" }
hyperion-memory = { path = "crates/hyperion-memory" }
hyperion-model-router = { path = "crates/hyperion-model-router" }
hyperion-scheduler = { path = "crates/hyperion-scheduler" }
hyperion-semantic-fs = { path = "crates/hyperion-semantic-fs" }
hyperion-storage = { path = "crates/hyperion-storage" }
hyperion-workspace = { path = "crates/hyperion-workspace" }
bitflags = "2"
thiserror = "2"
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
