[workspace]
resolver = "2"
members = [
    "crates/hyperion-agent-runtime",
    "crates/hyperion-ai-runtime",
    "crates/hyperion-api-gateway",
    "crates/hyperion-capability",
    "crates/hyperion-context",
    "crates/hyperion-compat",
    "crates/hyperion-coordination",
    "crates/hyperion-device",
    "crates/hyperion-explainability",
    "crates/hyperion-federation",
    "crates/hyperion-intent",
    "crates/hyperion-ipc",
    "crates/hyperion-knowledge-graph",
    "crates/hyperion-memory",
    "crates/hyperion-model-router",
    "crates/hyperion-netstack",
    "crates/hyperion-observability",
    "crates/hyperion-plugin-framework",
    "crates/hyperion-privacy",
    "crates/hyperion-recovery",
    "crates/hyperion-scheduler",
    "crates/hyperion-sdk",
    "crates/hyperion-security",
    "crates/hyperion-semantic-fs",
    "crates/hyperion-sim",
    "crates/hyperion-storage",
    "crates/hyperion-threat-model",
    "crates/hyperion-workspace",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/JGalego/HyperionOS"

[workspace.dependencies]
hyperion-agent-runtime = { path = "crates/hyperion-agent-runtime" }
hyperion-ai-runtime = { path = "crates/hyperion-ai-runtime" }
hyperion-api-gateway = { path = "crates/hyperion-api-gateway" }
hyperion-capability = { path = "crates/hyperion-capability" }
hyperion-context = { path = "crates/hyperion-context" }
hyperion-compat = { path = "crates/hyperion-compat" }
hyperion-coordination = { path = "crates/hyperion-coordination" }
hyperion-device = { path = "crates/hyperion-device" }
hyperion-explainability = { path = "crates/hyperion-explainability" }
hyperion-federation = { path = "crates/hyperion-federation" }
hyperion-intent = { path = "crates/hyperion-intent" }
hyperion-ipc = { path = "crates/hyperion-ipc" }
hyperion-knowledge-graph = { path = "crates/hyperion-knowledge-graph" }
hyperion-memory = { path = "crates/hyperion-memory" }
hyperion-model-router = { path = "crates/hyperion-model-router" }
hyperion-netstack = { path = "crates/hyperion-netstack" }
hyperion-observability = { path = "crates/hyperion-observability" }
hyperion-plugin-framework = { path = "crates/hyperion-plugin-framework" }
hyperion-privacy = { path = "crates/hyperion-privacy" }
hyperion-recovery = { path = "crates/hyperion-recovery" }
hyperion-scheduler = { path = "crates/hyperion-scheduler" }
hyperion-sdk = { path = "crates/hyperion-sdk" }
hyperion-security = { path = "crates/hyperion-security" }
hyperion-semantic-fs = { path = "crates/hyperion-semantic-fs" }
hyperion-storage = { path = "crates/hyperion-storage" }
hyperion-workspace = { path = "crates/hyperion-workspace" }
bitflags = "2"
thiserror = "2"
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
