[workspace]
resolver = "2"
members = [
    "crates/hyperion-agent-runtime",
    "crates/hyperion-ai-runtime",
    "crates/hyperion-api-gateway",
    "crates/hyperion-capability",
    "crates/hyperion-cgroups",
    "crates/hyperion-context",
    "crates/hyperion-compat",
    "crates/hyperion-console",
    "crates/hyperion-coordination",
    "crates/hyperion-crypto",
    "crates/hyperion-device",
    "crates/hyperion-events",
    "crates/hyperion-explainability",
    "crates/hyperion-federation",
    "crates/hyperion-init",
    "crates/hyperion-intent",
    "crates/hyperion-ipc",
    "crates/hyperion-knowledge-graph",
    "crates/hyperion-memory",
    "crates/hyperion-model-router",
    "crates/hyperion-netstack",
    "crates/hyperion-observability",
    "crates/hyperion-plugin-framework",
    "crates/hyperion-privacy",
    "crates/hyperion-recovery",
    "crates/hyperion-release-gate",
    "crates/hyperion-scalability",
    "crates/hyperion-scheduler",
    "crates/hyperion-sdk",
    "crates/hyperion-security",
    "crates/hyperion-semantic-fs",
    "crates/hyperion-shell",
    "crates/hyperion-sim",
    "crates/hyperion-storage",
    "crates/hyperion-supervisor",
    "crates/hyperion-threat-model",
    "crates/hyperion-trust-boundary",
    "crates/hyperion-turn",
    "crates/hyperion-update",
    "crates/hyperion-workspace",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/JGalego/HyperionOS"

[workspace.dependencies]
hyperion-agent-runtime = { path = "crates/hyperion-agent-runtime" }
hyperion-ai-runtime = { path = "crates/hyperion-ai-runtime" }
hyperion-api-gateway = { path = "crates/hyperion-api-gateway" }
hyperion-capability = { path = "crates/hyperion-capability" }
hyperion-cgroups = { path = "crates/hyperion-cgroups" }
hyperion-context = { path = "crates/hyperion-context" }
hyperion-compat = { path = "crates/hyperion-compat" }
hyperion-console = { path = "crates/hyperion-console" }
hyperion-coordination = { path = "crates/hyperion-coordination" }
hyperion-crypto = { path = "crates/hyperion-crypto" }
hyperion-device = { path = "crates/hyperion-device" }
hyperion-events = { path = "crates/hyperion-events" }
hyperion-explainability = { path = "crates/hyperion-explainability" }
hyperion-federation = { path = "crates/hyperion-federation" }
hyperion-init = { path = "crates/hyperion-init" }
hyperion-intent = { path = "crates/hyperion-intent" }
hyperion-ipc = { path = "crates/hyperion-ipc" }
hyperion-knowledge-graph = { path = "crates/hyperion-knowledge-graph" }
hyperion-memory = { path = "crates/hyperion-memory" }
hyperion-model-router = { path = "crates/hyperion-model-router" }
hyperion-netstack = { path = "crates/hyperion-netstack" }
hyperion-observability = { path = "crates/hyperion-observability" }
hyperion-plugin-framework = { path = "crates/hyperion-plugin-framework" }
hyperion-privacy = { path = "crates/hyperion-privacy" }
hyperion-recovery = { path = "crates/hyperion-recovery" }
hyperion-release-gate = { path = "crates/hyperion-release-gate" }
hyperion-scalability = { path = "crates/hyperion-scalability" }
hyperion-scheduler = { path = "crates/hyperion-scheduler" }
hyperion-sdk = { path = "crates/hyperion-sdk" }
hyperion-security = { path = "crates/hyperion-security" }
hyperion-semantic-fs = { path = "crates/hyperion-semantic-fs" }
hyperion-shell = { path = "crates/hyperion-shell" }
hyperion-storage = { path = "crates/hyperion-storage" }
hyperion-supervisor = { path = "crates/hyperion-supervisor" }
hyperion-trust-boundary = { path = "crates/hyperion-trust-boundary" }
hyperion-turn = { path = "crates/hyperion-turn" }
hyperion-update = { path = "crates/hyperion-update" }
hyperion-workspace = { path = "crates/hyperion-workspace" }
bitflags = "2"
thiserror = "2"
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
libc = "0.2"
# Real Noise Protocol Framework handshakes for hyperion-ipc's session-key binding -- the actual
# canonical implementation docs/15's own "Noise-protocol IPC handshakes" names, not a bespoke
# reimplementation of a named, specified protocol.
snow = "0.10"
drm = "0.15"
# Real, pure-Rust glyph rasterization for hyperion-init's DRM/KMS boot-splash renderer -- already
# present in this workspace's own dependency tree (a transitive dependency of hyperion-shell's
# egui/epaint), promoted to a direct workspace dependency rather than pulling in a new crate
# (fontdue/rusttype/freetype) for the same job.
ab_glyph = "0.2"
# The real, already-vendored (via the same egui/epaint dependency chain) embedded TrueType font
# bytes hyperion-init's boot-splash renderer rasterizes with ab_glyph -- zero new external font
# asset, zero new license to track.
epaint_default_fonts = "0.29"
# Real POSIX/FUSE mount for hyperion-semantic-fs. Its `default = []` cargo features mean this
# sandbox's missing libfuse3 *system* headers (no sudo access to install them) never come into
# play: on Linux with the `libfuse` feature left off, fuser's own build.rs auto-selects its
# pure-Rust mount path (`src/mnt/fuse_pure.rs`), which needs no libfuse C library at build time and
# shells out to the already-present, already-setuid `fusermount` binary at mount time -- confirmed
# by a real, throwaway probe mount in this exact sandbox before adding this dependency.
fuser = "0.17"
