[package]
name = "hyperion-agent-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hyperion-ai-runtime = { workspace = true }
hyperion-capability = { workspace = true }
hyperion-netstack = { workspace = true }
# Real, optional (Option<Arc<...>>, same shape as `NetstackHub` below) dispatch to an installed
# plugin's own real `NativeBinary` implementation when `capability_ref` isn't one of this crate's
# own hardcoded constants -- AUTONOMY_ROADMAP.md's Slice 1, closing this crate's own
# stub-dispatch-fallback gap for real.
hyperion-plugin-framework = { workspace = true }
hyperion-scheduler = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# For tests/lifecycle.rs's own real, signed ModelDescriptor -- needed now that
# document.draft/web.search dispatch through a real LocalAiRuntime::infer call (which requires a
# real registered, signature-verified model), not stubs::dispatch's harmless canned string.
hyperion-crypto = { workspace = true }
tempfile = { workspace = true }
