[package]
name = "hyperion-agent-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hyperion-ai-runtime = { workspace = true }
hyperion-capability = { workspace = true }
# Real, optional (Option<Arc<...>>, same shape as `NetstackHub`/`PluginRegistry` below) durable,
# cross-session record of this crate's own real suspend/auto-resume/backoff-decay history --
# AUTONOMY_ROADMAP.md's Self-Sustaining pillar's "cross-session learning" slice. See
# `AgentRuntime::spawn`'s own doc comment for what a fresh instance actually does with it.
hyperion-memory = { workspace = true }
hyperion-netstack = { workspace = true }
# Real, optional (Option<Arc<...>>, same shape as `NetstackHub` below) dispatch to an installed
# plugin's own real `NativeBinary` implementation when `capability_ref` isn't one of this crate's
# own hardcoded constants -- AUTONOMY_ROADMAP.md's Slice 1, closing this crate's own
# stub-dispatch-fallback gap for real.
hyperion-plugin-framework = { workspace = true }
hyperion-scheduler = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# For tests/lifecycle.rs's own real, signed ModelDescriptor -- needed now that
# document.draft/web.search dispatch through a real LocalAiRuntime::infer call (which requires a
# real registered, signature-verified model), not stubs::dispatch's harmless canned string.
hyperion-crypto = { workspace = true }
# For tests/cross_session_learning.rs's own real, on-disk KnowledgeGraph, opened twice against the
# same path to simulate a real restart -- this crate's own real dependency is only on
# hyperion-memory, which owns its own KnowledgeGraph handle internally.
hyperion-knowledge-graph = { workspace = true }
tempfile = { workspace = true }
