[package]
name = "hyperion-ai-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hyperion-capability = { workspace = true }
hyperion-crypto = { workspace = true }
thiserror = { workspace = true }
anyhow = { version = "1", optional = true }
candle-core = { version = "0.11", optional = true }
candle-nn = { version = "0.11", optional = true }
candle-transformers = { version = "0.11", optional = true }
hf-hub = { version = "1.0", optional = true, features = ["blocking"] }
# default-features = false, features = ["onig"] mirrors candle-core's own already-vetted choice
# (see its Cargo.toml) for its own tokenizers dependency: the full default feature set also pulls
# in `esaxx_fast` (a Unigram-tokenizer speed optimization, not a correctness requirement -- a pure
# Rust fallback exists), which needs a real C++ toolchain to build. Real musl cross-compilation
# (PRODUCTION_BOOT_PROMPT.md's boot image) has no such toolchain available; matching candle-core's
# own restraint here avoids a C++ dependency this crate's own real caller never needed.
tokenizers = { version = "0.23", optional = true, default-features = false, features = ["onig"] }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }

[features]
# Real, feature-gated on-device inference (PRODUCTION_BOOT_PROMPT.md M8) -- see
# src/candle_backend.rs's own doc comment for why this stays off the default build: Candle's
# real dependency chain is heavy, and MockBackend remains the zero-network, zero-extra-dependency
# default every existing test already relies on.
candle = [
    "dep:anyhow",
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:hf-hub",
    "dep:tokenizers",
]
