[package]
name = "hyperion-api-gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hyperion-agent-runtime = { workspace = true }
hyperion-ai-runtime = { workspace = true }
hyperion-capability = { workspace = true }
hyperion-context = { workspace = true }
hyperion-explainability = { workspace = true }
hyperion-intent = { workspace = true }
hyperion-knowledge-graph = { workspace = true }
hyperion-memory = { workspace = true }
hyperion-model-router = { workspace = true }
hyperion-plugin-framework = { workspace = true }
hyperion-recovery = { workspace = true }
hyperion-security = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
