[package]
name = "hyperion-api-gateway"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hyperion-agent-runtime = { workspace = true }
hyperion-ai-runtime = { workspace = true }
hyperion-capability = { workspace = true }
hyperion-context = { workspace = true }
hyperion-explainability = { workspace = true }
hyperion-intent = { workspace = true }
hyperion-knowledge-graph = { workspace = true }
hyperion-memory = { workspace = true }
hyperion-model-router = { workspace = true }
hyperion-observability = { workspace = true }
hyperion-plugin-framework = { workspace = true }
hyperion-privacy = { workspace = true }
hyperion-recovery = { workspace = true }
hyperion-scheduler = { workspace = true }
hyperion-security = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hyperion-crypto = { workspace = true }
tempfile = { workspace = true }
