[package]
name = "hyperion-cgroups"
version = "0.3.0"
edition.workspace = true
license.workspace = true
description = "Real Linux cgroups v2 + real scheduling policy enforcement for hyperion-scheduler's admission/fairness decisions (docs/998-roadmap.md M4)."

[dependencies]
hyperion-scheduler = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hyperion-capability = { workspace = true }
tempfile = { workspace = true }
