[package]
name = "hyperion-console"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Real text console: a typed utterance drives the real Intent Engine, real Agent invocation, and hyperion-workspace's real compiled accessibility tree, rendered as real text (PRODUCTION_BOOT_PROMPT.md M7, stage 1)."

[[bin]]
name = "hyperion-console"
path = "src/main.rs"

[dependencies]
hyperion-agent-runtime = { workspace = true }
hyperion-ai-runtime = { workspace = true }
hyperion-capability = { workspace = true }
hyperion-context = { workspace = true }
hyperion-coordination = { workspace = true }
hyperion-crypto = { workspace = true }
hyperion-intent = { workspace = true }
hyperion-knowledge-graph = { workspace = true }
hyperion-netstack = { workspace = true }
hyperion-workspace = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
# Real, feature-gated on-device inference for this console's own real
# `assistant.respond` Capability call (PRODUCTION_BOOT_PROMPT.md M8) -- off by default for
# the exact same reason `hyperion-ai-runtime`'s own `candle` feature is: a real boot/release
# image build opts in explicitly; every host-side dev/test build stays fast and network-free
# on `MockBackend`.
candle = ["hyperion-ai-runtime/candle"]
# Real, feature-gated HTTP/TLS/DNS for this console's own real `web.research` Capability call
# (PRODUCTION_BOOT_PROMPT.md M10) -- same reasoning as `candle` above, forwarding to
# `hyperion-netstack`'s own `real-http` feature.
real-http = ["hyperion-netstack/real-http"]
