[package]
name = "hyperion-console"
version = "0.3.0"
edition.workspace = true
license.workspace = true
description = "Real text console: a typed utterance drives the real Intent Engine, real Agent invocation, and hyperion-workspace's real compiled accessibility tree, rendered as real text (docs/998-roadmap.md M7, stage 1)."

[[bin]]
name = "hyperion-console"
path = "src/main.rs"

[dependencies]
hyperion-agent-runtime = { workspace = true }
hyperion-ai-runtime = { workspace = true }
hyperion-capability = { workspace = true }
hyperion-context = { workspace = true }
hyperion-coordination = { workspace = true }
hyperion-crypto = { workspace = true }
# Real, automatic Explanation Record keeping around every real Agent invocation this session
# dispatches -- `hyperion-agent-runtime::AgentRuntime::with_explainability`'s own real production
# caller. Previously unreachable from this crate: `hyperion-agent-runtime` could not depend on
# this crate directly until a real Cargo cycle on `hyperion-explainability`'s own side was
# resolved (see that crate's doc comment).
hyperion-explainability = { workspace = true }
hyperion-intent = { workspace = true }
hyperion-knowledge-graph = { workspace = true }
# Real, encrypted-nowhere-else "was this meaningful?" reflection signal (docs/998-roadmap.md's
# Backlog "Protect the Human" item) -- see the `/meaningful` meta-command in `src/session.rs`.
hyperion-memory = { workspace = true }
hyperion-netstack = { workspace = true }
# Real, sandboxed (Landlock/seccomp) NativeBinary capability dispatch -- see the `/install-binary`
# meta-command in `src/session.rs`. `AgentRuntime::invoke`'s own real dispatch path for this was
# previously unreachable from any production binary: every real caller in this workspace
# constructed `AgentRuntime` with `plugins: None`.
hyperion-plugin-framework = { workspace = true }
hyperion-turn = { workspace = true }
hyperion-workspace = { workspace = true }
# Real mDNS/DNS-SD advertise+discover for `/mcp-server`/`/a2a-server` (docs/998-roadmap.md's
# Social pillar) -- a pure-Rust mDNS-SD implementation, no C/system daemon dependency. Optional,
# gated behind the `mdns` feature -- see this crate's own `discovery` module doc comment.
mdns-sd = { version = "0.20", optional = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# For src/secret_input.rs's real termios ECHO-off guard (docs/998-roadmap.md "Phase 2:
# cloud providers") -- already pinned at the workspace level (hyperion-init/hyperion-cgroups/
# hyperion-trust-boundary/hyperion-supervisor already depend on it), so this is zero new external
# crate surface, just a new direct dependency of this crate.
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
# Real, feature-gated on-device inference for this console's own real
# `assistant.respond` Capability call (docs/998-roadmap.md M8) -- off by default for
# the exact same reason `hyperion-ai-runtime`'s own `candle` feature is: a real boot/release
# image build opts in explicitly; every host-side dev/test build stays fast and network-free
# on `MockBackend`.
candle = ["hyperion-ai-runtime/candle"]
# Real, feature-gated HTTP/TLS/DNS for this console's own real `web.research` Capability call
# (docs/998-roadmap.md M10) -- same reasoning as `candle` above, forwarding to
# `hyperion-netstack`'s own `real-http` feature.
real-http = ["hyperion-netstack/real-http"]
# Real, feature-gated HTTP inference against any OpenAI-compatible local engine (Ollama, vLLM,
# a self-hosted LiteLLM proxy) via the console's own `/backend`/`use backend` meta-command
# (docs/998-roadmap.md "Phase 1: local-engine backends") -- same reasoning as `candle`
# above, forwarding to `hyperion-ai-runtime`'s own `openai-compat` feature.
openai-compat = ["hyperion-ai-runtime/openai-compat"]
# Real, feature-gated HTTP inference against Anthropic's/Google's own real cloud APIs
# (docs/998-roadmap.md "Phase 2: cloud providers") -- same reasoning as `candle` above,
# forwarding to `hyperion-ai-runtime`'s own `anthropic`/`gemini` features. OpenAI itself needs no
# separate feature here: it's reached via the existing `openai-compat` feature's own backend.
anthropic = ["hyperion-ai-runtime/anthropic"]
gemini = ["hyperion-ai-runtime/gemini"]
# Real, feature-gated mDNS/DNS-SD advertise+discover (docs/998-roadmap.md's Social pillar) --
# same reasoning as `real-http` above: a real release image opts in explicitly; every host-side
# dev/test build of this console stays network-free by default.
mdns = ["dep:mdns-sd"]
