[package]
name = "hyperion-context"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hyperion-capability = { workspace = true }
hyperion-knowledge-graph = { workspace = true }
hyperion-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hyperion-ipc = { workspace = true }
tempfile = { workspace = true }
