[package]
name = "hyperion-coordination"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hyperion-agent-runtime = { workspace = true }
hyperion-capability = { workspace = true }
hyperion-explainability = { workspace = true }
hyperion-intent = { workspace = true }
hyperion-knowledge-graph = { workspace = true }
# Real, live registration point for `Contribution::Agent` -- `catalog::best_fit_manifest_with_plugins`
# merges `PluginRegistry::agent_contributions` into this crate's own built-in roster.
hyperion-plugin-framework = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hyperion-ai-runtime = { workspace = true }
hyperion-context = { workspace = true }
# For tests/worked_trace.rs's own real, signed ModelDescriptor -- needed now that
# document.draft/web.search dispatch through a real LocalAiRuntime::infer call.
hyperion-crypto = { workspace = true }
hyperion-ipc = { workspace = true }
tempfile = { workspace = true }
