[package]
name = "hyperion-coordination"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hyperion-agent-runtime = { workspace = true }
hyperion-capability = { workspace = true }
hyperion-explainability = { workspace = true }
hyperion-intent = { workspace = true }
hyperion-knowledge-graph = { workspace = true }
# Real, optional (Option<Arc<...>>, the same optional-backend shape this workspace already uses
# elsewhere) session/goal-scoped undo bridge -- see `Self::with_recovery`'s own doc comment. Closes
# `hyperion-recovery`'s own previously-named "UndoScope::Session/Goal" gap: this crate's own
# `SharedPlan.session_id`/`root_intent` are the real ids that gap named as missing.
hyperion-recovery = { workspace = true }
# Real, live registration point for `Contribution::Agent` -- `catalog::best_fit_manifest_with_plugins`
# merges `PluginRegistry::agent_contributions` into this crate's own built-in roster.
hyperion-plugin-framework = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hyperion-ai-runtime = { workspace = true }
hyperion-context = { workspace = true }
# For tests/worked_trace.rs's own real, signed ModelDescriptor -- needed now that
# document.draft/web.search dispatch through a real LocalAiRuntime::infer call.
hyperion-crypto = { workspace = true }
# For tests/shared_explanation_store.rs's own real, cross-crate proof that a shared
# hyperion_explainability::ExplanationStore never collides two independent real owners'
# action_ids -- the same "proven end to end, not just in one crate" precedent hyperion-ipc's own
# dev-dependency below already established for ipc_transport.rs.
hyperion-federation = { workspace = true }
hyperion-ipc = { workspace = true }
# For src/engine.rs's own `task_partition_key_tests` -- `NodeId` is a type alias for
# `hyperion_storage::ObjectId` (a type alias doesn't carry the tuple-struct constructor under the
# alias name), so a test constructing raw ids directly needs the real underlying type.
hyperion-storage = { workspace = true }
tempfile = { workspace = true }
