[package]
name = "hyperion-crypto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = { version = "1", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
rand_core = { version = "0.6", features = ["std"] }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
